:memo: Fix title caps on bibliography #40

--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -67,7 +67,7 @@
 @INPROCEEDINGS{pYIN,
 	author={Mauch, Matthias and Dixon, Simon},
 	booktitle={2014 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)}, 
-	title={PYIN: A fundamental frequency estimator using probabilistic threshold distributions}, 
+	title={{PYIN}: A fundamental frequency estimator using probabilistic threshold distributions}, 
 	year={2014},
 	pages={659-663},
 	doi={10.1109/ICASSP.2014.6853678}
@@ -84,7 +84,7 @@
 
 @ARTICLE{SPICE,  
 	author={Gfeller, Beat and Frank, Christian and Roblek, Dominik and Sharifi, Matt and Tagliasacchi, Marco and Velimirović, Mihajlo},  journal={IEEE/ACM Transactions on Audio, Speech, and Language Processing},   
-	title={SPICE: Self-Supervised Pitch Estimation},   
+	title={{SPICE}: Self-Supervised Pitch Estimation},   
 	year={2020},  
 	volume={28},  
 	pages={1118-1128},  
