:memo: Remove application description and move relevant parts to other sections #40
+ Moves business logic to tone calculation section
+ Moves description of how tests should be defined to methodology

--- a/doc/secciones/04_planificacion.tex
+++ b/doc/secciones/04_planificacion.tex
@@ -121,7 +121,7 @@ Al subir cualquier cambio a GitHub se ejecutan automáticamente las pruebas. Par
 
 \begin{itemize}
 	\item{Errores, adherencia a la guía de estilo \href{https://peps.python.org/pep-0008/}{PEP8} y complejidad del código.}
-	\item{Test unitarios, de integración y de cobertura}
+	\item{Test unitarios, de integración y de cobertura. Los tests han de definirse cubriendo un único caso lógico por cada test, lo que permite saber con precisión que funciona exactamente y que no, y cubriendo la mayor cantidad posible de casos lógicos. Para aceptar un PMV al menos el 85\% de su código debe estar cubierto por tests.}
 	\item{Correcta instalación del proyecto y sus dependencias}
 \end{itemize}
 
