:memo: Small report corrections #40
+ txt -> \texttt{txt}
+ Consistent style
+ Explain class design was guided by the domain
+ Correctly explain librosa doesn't need the user to manually install additional software

--- a/doc/secciones/04_planificacion.tex
+++ b/doc/secciones/04_planificacion.tex
@@ -76,6 +76,7 @@ Como programador me gustaría poder ver pruebas detalladas sobre el rendimiento 
 
 
 \section{Hitos}
+\label{sec:hitos}
 
 Siguiendo los principios del desarrollo ágil presentados en la sección \ref{sec:agile} el desarrollo debería realizarse de forma \textbf{incremental}, ya que de esta forma es posible presentar resultados frecuentemente y cambiar o adaptar los requerimientos.
 
