--- a/doc/secciones/06_implementacion.tex
+++ b/doc/secciones/06_implementacion.tex
@@ -1,6 +1,6 @@
 \chapter{Implementación}
 
-La implementación del software se ha dividido en hitos. Estos han sido definidos en GitHub
+La implementación del software se ha dividido en hitos tal y como se explica en la sección \ref{sec:hitos}. Estos han sido definidos en GitHub
 y cada uno de ellos contiene un grupo de \textit{issues} que se corresponden con las distintas
 mejoras que se han ido incorporando al software a lo largo de su desarrollo.
 
@@ -131,7 +131,7 @@ Con esta intención, se ha construido una librería para leer este tipo de archi
 
 \subsubsection{Lectura y decodificación}
 
-En la definición del formato UltraStar txt no se establece la codificación de caracteres que deben usar los archivos, y como resultado, se comparten con distintas codificaciones. Tampoco es posible determinar la codificación a partir del archivo de forma sencilla, ya que son archivos de texto plano donde no se encuentra especificada.
+En la definición del formato UltraStar \texttt{txt} no se establece la codificación de caracteres que deben usar los archivos, y como resultado, se comparten con distintas codificaciones. Tampoco es posible determinar la codificación a partir del archivo de forma sencilla, ya que son archivos de texto plano donde no se encuentra especificada.
 
 Buscando la mayor compatibilidad se consideraron los siguientes acercamientos para decodificar los archivos:
 
@@ -153,10 +153,10 @@ La implementación final estima el formato de codificación del archivo de texto
 
 \subsubsection{Diseño de las estructuras de datos}
 
-Como plantillas para las estructuras de datos se han definido las clases representadas en la figura \ref{fig:class1}, intentando crear capas de abstracción adecuadas al dominio del problema. Además, se han definido algunos comportamientos asociados:
+Como plantillas para las estructuras de datos se han definido las clases representadas en la figura \ref{fig:class1}, intentando crear capas de abstracción adecuadas utilizando un modelado guiado por el dominio relativo al formato. Además, se han definido algunos comportamientos asociados:
 \begin{itemize}
 	\item{Comprobaciones de que los valores que se asignen son válidos (por ejemplo, la duración de una nota no puede ser negativa) tanto en creación como en modificación, en caso contrario, se indica el problema lanzando una excepción del tipo correspondiente con un mensaje que explica el error.}
-	\item{Métodos para generar el texto que correspondería en un archivo UltraStar txt a partir de los datos almacenados en el objeto.}
+	\item{Métodos para generar el texto que correspondería en un archivo UltraStar \texttt{txt} a partir de los datos almacenados en el objeto.}
 	\item{Implementación del método \texttt{\_\_eq\_\_} para poder comparar objetos  y determinar si son iguales.}
 \end{itemize}
 
@@ -177,7 +177,7 @@ Se desea separar y extraer los fragmentos de texto que contienen la información
 \end{itemize}
 
 
-Para escoger la opción más adecuada es importante tener en cuenta que el formato del texto presenta un lenguaje regular, sencillo y sin anidado. Para este tipo de lenguaje las expresiones regulares son adecuadas permitiendo validar fácilmente que el texto presenta el formato correcto (a diferencia de las transformaciones básicas de texto) y siendo una solución corta, simple y precisa (a diferencia de los módulos de analizadores de propósito general, que son más adecuados para gramáticas complejas).
+Para escoger la opción más adecuada es importante tener en cuenta que el formato del texto presenta un lenguaje regular sencillo. Para este tipo de lenguaje las expresiones regulares son adecuadas permitiendo validar fácilmente que el texto presenta el formato correcto (a diferencia de las transformaciones básicas de texto) y siendo una solución corta, simple y precisa (a diferencia de los módulos de analizadores de propósito general, que son más adecuados para gramáticas complejas).
 
 Por lo tanto, la implementación realizada procesa cada línea por orden utilizando expresiones regulares (ya que cada fragmento de información se encuentra separado en una línea distinta) y transforma la información extraída en objetos de las clases definidas anteriormente, componiendo finalmente un solo objeto que contiene toda la información del archivo de texto.  Si el formato del texto es incorrecto, ya sea por no respetar el orden (primero un bloque de metadatos, después descripción de la canción) o porque alguna línea no coincide con ninguna de las expresiones regulares, se lanza una excepción indicando el error y mostrando el número de línea que lo ha causado y su contenido.
 
@@ -186,11 +186,13 @@ Por lo tanto, la implementación realizada procesa cada línea por orden utiliza
 
 Para poder estimar los tonos es necesario cargar el audio de la canción en una estructura de datos adecuada, específicamente un vector de muestras.
 
-Idealmente, el programa debería soportar la mayor variedad de formatos posibles en múltiples plataformas. Concretamente, la compatibilidad con el formato MP3 es relevante debido a su omnipresencia. Sin embargo, como consecuencia de la existencia de patentes alrededor del formato que no expiraron hasta 2017 \cite{mp3patents}, algunas librerías del sistema solo tienen soporte en las versiones más recientes (que una plataforma puede no haber recibido todavía).
+Idealmente, el programa debería soportar la mayor variedad de formatos posibles en múltiples plataformas. Concretamente, la compatibilidad con el formato MP3 es relevante debido a su omnipresencia. Sin embargo, como consecuencia de la existencia de patentes alrededor del formato que no expiraron hasta 2017\footnote{\url{https://www.tunequest.org/a-big-list-of-mp3-patents/20070226/}}, algunas librerías del sistema solo tienen soporte en las versiones más recientes (que una plataforma puede no haber recibido todavía).
 
-Existen varias librerías de Python mantenidas activamente que permiten cargar audio en varios formatos (SoundFile, Pydub, audioread y librosa), pero todas dependen de librerías del sistema que el usuario puede no tener instaladas para decodificar formatos con compresión, como MP3.
+Existen varias librerías de Python mantenidas activamente que permiten cargar audio en varios formatos (SoundFile, Pydub, audioread), sin embargo, todas dependen de librerías del sistema que el usuario puede no tener instaladas para decodificar formatos con compresión, como MP3. 
 
-La opción elegida es librosa, porque satisface la compatibilidad con distintos formatos y plataformas sin necesidad de que el usuario instale software adicional manualmente. Es capaz de funcionar con una amplia variedad de librerías del sistema para lectura de audio, incluyendo todas las soportadas por el resto de opciones, y en sistemas operativos en los que no se encuentra una de ellas por defecto, se incluye junto con la librería.
+Otra opción, librosa, también depende de la existencia de una librería del sistema compatible para la lectura de audio, pero es capaz de trabajar con una amplia variedad, incluyendo todas las soportadas por el resto de opciones. Además, en sistemas operativos en los que no se encuentra ninguna de las librerías compatibles por defecto, se incluye una en la instalación.
+
+Por lo tanto, como librosa satisface la compatibilidad con distintos formatos y plataformas sin necesidad de que el usuario instale software adicional manualmente, es la opción elegida para cargar el audio de la canción.
 
 Adicionalmente, es una opción excelente para el proyecto, ya que, proporciona funciones relacionadas con el análisis musical, como estimación de las pulsaciones por minuto de la canción, transformación de hercios a tonos MIDI, normalización del audio y otras utilidades.
 
