:memo: Add state of the art section header to fix CI

--- a/doc/secciones/03_estado_del_arte.tex
+++ b/doc/secciones/03_estado_del_arte.tex
@@ -21,3 +21,4 @@ Algunas de las tareas son más complejas o tardan más en completarse. Definir l
 
 ¿Debe darse prioridad a la automatización de estas tareas, por ser las más complejas? Es un argumento a tener en cuenta, sin embargo, es importante valorar las soluciones ya existentes para decidir el enfoque del trabajo, analizadas en el capítulo \ref{ch:artstate} sobre el estado del arte.
 
+\section{Estado del arte}
