:memo: Add state of the art section to report #51
+ Closes #51 by describing current state of the art and possible improvements.

--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -90,3 +90,20 @@
 	pages={1118-1128},  
 	doi={10.1109/TASLP.2020.2982285}
 }
+
+@article{Sub-Sync,
+	title={Sub-Sync: Automatic Synchronization of Subtitles in the Broadcasting of True Live programs in Spanish},
+	author={Israel Gonz{\'a}lez-Carrasco and Laura Medina de Puente and Bel{\'e}n Ru{\'i}z-Mezcua and Jos{\'e} Luis L{\'o}pez-Cuadrado},
+	journal={IEEE Access},
+	year={2019},
+	volume={7},
+	pages={60968-60983}
+}
+
+@article{Deep-Sync,
+	title={Deep-Sync: A novel deep learning-based tool for semantic-aware subtitling synchronisation},
+	author={Alejandro Mart{\'i}n and Israel Gonz{\'a}lez-Carrasco and V{\'i}ctor Rodr{\'i}guez-Fern{\'a}ndez and M{\'o}nica Souto-Rico and David Camacho and Bel{\'e}n Ru{\'i}z-Mezcua},
+	journal={Neural Computing and Applications},
+	year={2021},
+	pages={1-15}
+}
