--- a/doc/proyecto.tex
+++ b/doc/proyecto.tex
@@ -21,6 +21,7 @@
 \usepackage{graphicx}
 \usepackage{tabularx}
 \usepackage{booktabs}
+\usepackage{threeparttable}
 
 \usepackage[table,xcdraw]{xcolor}
 \hypersetup{
