:memo: Small corrections for state of the art section #51

--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -92,7 +92,7 @@
 }
 
 @article{Sub-Sync,
-	title={Sub-Sync: Automatic Synchronization of Subtitles in the Broadcasting of True Live programs in Spanish},
+	title={{Sub-Sync: Automatic Synchronization of Subtitles in the Broadcasting of True Live programs in Spanish}},
 	author={Israel Gonz{\'a}lez-Carrasco and Laura Medina de Puente and Bel{\'e}n Ru{\'i}z-Mezcua and Jos{\'e} Luis L{\'o}pez-Cuadrado},
 	journal={IEEE Access},
 	year={2019},
@@ -101,7 +101,7 @@
 }
 
 @article{Deep-Sync,
-	title={Deep-Sync: A novel deep learning-based tool for semantic-aware subtitling synchronisation},
+	title={{Deep-Sync: A novel deep learning-based tool for semantic-aware subtitling synchronisation}},
 	author={Alejandro Mart{\'i}n and Israel Gonz{\'a}lez-Carrasco and V{\'i}ctor Rodr{\'i}guez-Fern{\'a}ndez and M{\'o}nica Souto-Rico and David Camacho and Bel{\'e}n Ru{\'i}z-Mezcua},
 	journal={Neural Computing and Applications},
 	year={2021},
