--- a/doc/secciones/03_estado_del_arte.tex
+++ b/doc/secciones/03_estado_del_arte.tex
@@ -19,7 +19,7 @@ Independientemente del formato utilizado para guardar las canciones, las princip
 
 Algunas de las tareas son más complejas o tardan más en completarse. Definir la información de las notas en general es un proceso tedioso debido a la gran cantidad de notas que pueden ser cantadas en una canción (por ejemplo, la canción \texttt{'Rolling in the Deep' de Adele} requiere la definición de más de 500 notas individuales) y, en particular, la asignación de los tonos es especialmente compleja porque requiere de oído musical y un proceso de prueba y error.
 
-¿Debe darse prioridad a la automatización de estas tareas, por ser las más complejas? Es un argumento a tener en cuenta, sin embargo, es importante valorar las soluciones ya existentes para decidir el enfoque del trabajo, analizadas en el capítulo \ref{ch:artstate} sobre el estado del arte.
+¿Debe darse prioridad a la automatización de estas tareas, por ser las más complejas? Es un argumento a tener en cuenta, sin embargo, es importante valorar las soluciones ya existentes para decidir el enfoque del trabajo, analizadas en la siguiente sección.
 
 \section{Estado del arte}
 
@@ -49,7 +49,7 @@ Para conocer que formatos son los más usados se han analizado los videojuegos d
 	\end{threeparttable}
 \end{table}
 
-El estándar de facto en los videojuegos de software libre es el formato UltraStar y, ya sea de forma nativa o a través de un conversor, es compatible con todos aquellos que permiten añadir canciones personalizadas.
+De lo anterior se deduce que el estándar de facto en los videojuegos de software libre es el formato UltraStar y, ya sea de forma nativa o a través de un conversor, es compatible con todos aquellos que permiten añadir canciones personalizadas.
 
 
 
