:memo: Add conclusions section to report #58
+ Closes #58 by adding a redaction of the conclusions

--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -107,3 +107,21 @@
 	year={2021},
 	pages={1-15}
 }
+
+@misc{harmof0,
+	doi = {10.48550/ARXIV.2205.01019},
+	
+	url = {https://arxiv.org/abs/2205.01019},
+	
+	author = {Wei, Weixing and Li, Peilin and Yu, Yi and Li, Wei},
+	
+	keywords = {Sound (cs.SD), Artificial Intelligence (cs.AI), Audio and Speech Processing (eess.AS), FOS: Computer and information sciences, FOS: Computer and information sciences, FOS: Electrical engineering, electronic engineering, information engineering, FOS: Electrical engineering, electronic engineering, information engineering},
+	
+	title = {{HarmoF0: Logarithmic Scale Dilated Convolution For Pitch Estimation}},
+	
+	publisher = {arXiv},
+	
+	year = {2022},
+	
+	copyright = {arXiv.org perpetual, non-exclusive license}
+}
