--- a/doc/secciones/03_estado_del_arte.tex
+++ b/doc/secciones/03_estado_del_arte.tex
@@ -1,6 +1,7 @@
 \chapter{Descripción del problema y estado del arte}
 
 \section{Descripción del problema}
+\label{sec:problemdescription}
 
 Con el fin de facilitar el proceso de añadir canciones a videojuegos de karaoke, se pretende avanzar en la automatización de las tareas relacionadas.
 
