:memo: Add abstract to report #59
+ Closes #59 by adding abstract in English and Spanish

--- a/doc/prefacios/english_abstract.tex
+++ b/doc/prefacios/english_abstract.tex
@@ -2,15 +2,25 @@
 
 
 \begin{center}
-	{\large\bfseries Same, but in English}
+\large\bfseries 
+\texttt{\normalfont\large\bfseries UltraStar: Song2txt}
+	
+Automatic adaptation of songs for karaoke games
 \end{center}
+
 \begin{center}
-	Student's name
+	\texttt{\normalfont Francisco Javier Bolívar Expósito}
 \end{center}
+
+
 \vspace{0.5cm}
-\noindent\textbf{Keywords}: \textit{open source}, \textit{floss}
+\noindent\textbf{Keywords}: \textit{FLOSS, UltraStar, Python, Agile development}
 \vspace{0.7cm}
 
 \noindent\textbf{Abstract}
+
+Adapting songs for karaoke video games is a complex process that requires musical knowledge, which results in a limited number of songs available. Taking advantage of advances in artificial intelligence, thanks to which it is possible to solve problems with computer systems that previously required the intervention of a human, this work aims to facilitate the adaptation of songs by advancing in its automation.
+
+To this end, using agile development, a Python application has been implemented that, from the audio of a song, estimates the tones of each note performed by the singer and saves them in a file with the standard \texttt{UltraStar} format for karaoke video games, with greater precision than existing solutions. Additionally, the library developed to work with the \texttt{UltraStar} format can be used independently by other projects.
 
 \end{otherlanguage}
