--- a/doc/prefacios/prefacio.tex
+++ b/doc/prefacios/prefacio.tex
@@ -2,22 +2,26 @@
 
 \begin{center}
 \large\bfseries
-Título
+UltraStar: \texttt{\normalfont{\large\bfseries Song2txt}}
 
-Subtítulo 
+Adaptación automática de canciones para juegos de karaoke
 \end{center}
+
 \begin{center}
 Francisco Javier Bolívar Expósito
 \end{center}
 
-%\vspace{0.7cm}
 
 \vspace{0.5cm}
-\noindent\textbf{Palabras clave}: \textit{software libre}
+\noindent\textbf{Palabras clave}: \textit{Software libre, UltraStar, Python, Desarrollo ágil}
 \vspace{0.7cm}
 
 \noindent\textbf{Resumen}
-	
+
+La adaptación de canciones para videojuegos de karaoke es un proceso complejo que requiere conocimientos musicales, lo que provoca que el número de canciones disponibles sea reducido. Aprovechando los avances en inteligencia artificial, gracias a los cuales es posible resolver problemas con sistemas informáticos que anteriormente requerían la intervención de un humano, este trabajo tiene el propósito de facilitar la adaptación de canciones avanzando en su automatización.
+
+Para ello, utilizando un desarrollo ágil, se ha implementado una aplicación en Python que a partir del audio de una canción estima los tonos de cada nota interpretada por el cantante y los guarda en un archivo con el formato estándar UltraStar para videojuegos de karaoke, con una precisión superior a soluciones existentes. Adicionalmente, la librería desarrollada para trabajar con el formato UltraStar puede ser usada independientemente por otros proyectos.
+
 
 \cleardoublepage
 
